cooddy/tests/suite/analyzerToolTest/parseErrors/goo.c

int goo()
{
    int* p = foo(aaa);  // error here
    return *p;
}
